# eye-config

./: Cargo.toml  README.md  update.ps1
examples/: preferred_model.rs
src/: args.rs  clean_command.rs  command.rs  global_args.rs  init_tracing.rs  known_projects.rs  lib.rs  list_command.rs  main.rs  persistable_state.rs  persistence_key.rs  project.rs  show_command.rs
src/cli/: args.rs  init_tracing.rs  mod.rs
src/cli/command/: clean_command.rs  command.rs  list_command.rs  mod.rs  prune_command.rs  show_command.rs
src/cli/config/: known_projects.rs  project.rs
src/command/: clean_command.rs  command.rs  list_command.rs  mod.rs  prune_command.rs  show_command.rs
src/our_config/: mod.rs  project.rs
