[package]
name = "eye_config"
version = "0.1.0"
edition = "2024"

[features]
bevy = ["dep:bevy_log"]

[dependencies]
async-recursion = "1.1.1"
async-trait = "0.1.88"
bevy_log = { version = "0.16.0", optional = true }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
cloud_terrastodon_user_input = "0.14.0"
color-eyre = "0.6.5"
directories-next = "2.0.0"
eyre = "0.6.12"
itertools = "0.14.0"
ordermap = { version = "0.5.7", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
